--- a/bower.json
+++ b/bower.json
@@ -2,20 +2,21 @@
   "name": "yapp",
   "version": "0.0.0",
   "dependencies": {
-    "angular": "^1.3.0",
+    "angular": "1.4.9",
+    "jquery":"~2.1.1",
     "json3": "^3.3.0",
     "es5-shim": "^4.0.0",
     "bootstrap": "^3.2.0",
-    "angular-mocks": "~1.3.14",
+    "angular-mocks": "1.4.9",
     "ui-router": "~0.2.13",
     "bootstrap-btn-outline-rounded": "~0.0.3",
-    "angular-animate": "~1.3.15",
+    "angular-animate": "1.4.9",
     "highcharts":"v4.2.5"
   },
   "devDependencies": {
-    "angular-mocks": "~1.3.0"
+    "angular-mocks": "1.4.9"
   },
   "resolutions": {
-    "angular": "1.3.14"
+    "angular": "1.4.9"
   }
 }
